Changed cmap to Spectral

--- a/report/report m2 ZDT1.ipynb
+++ b/report/report m2 ZDT1.ipynb
@@ -673,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "customOutput": null,
@@ -712,7 +712,7 @@
     "\n",
     "fig, axes = plt.subplots(1, 3, figsize=(23, 7), sharex=True, sharey=True)\n",
     "algos = [\"qNParEGO\", \"qEHVI\", \"qNEHVI\"]\n",
-    "cm = plt.get_cmap(\"viridis\")\n",
+    "cm = plt.get_cmap(\"Spectral\")\n",
     "\n",
     "batch_number = torch.cat(\n",
     "    [\n",
@@ -739,7 +739,7 @@
     "    axes[i].legend()\n",
     "axes[0].set_ylabel(\"Objective 2\")\n",
     "norm = plt.Normalize(batch_number.min(), batch_number.max())\n",
-    "sm = ScalarMappable(norm=norm, cmap=plt.get_cmap(\"plasma\"))\n",
+    "sm = ScalarMappable(norm=norm, cmap=plt.get_cmap(\"Spectral\"))\n",
     "sm.set_array([])\n",
     "fig.subplots_adjust(right=0.9)\n",
     "cbar_ax = fig.add_axes([0.93, 0.15, 0.01, 0.7])\n",
