Saved noisy files. working without noise

--- a/report/with noise/report.ipynb
+++ b/report/with noise/report.ipynb
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 2,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -78,7 +78,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 3,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -87,7 +87,16 @@
         "originalKey": "a8741d41-72b7-42e8-bd5d-3972be9995f7",
         "requestMsgId": "bceaa0af-ffe5-415a-a5b1-93fc9cf7f71a"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n"
+          ]
+        }
+      ],
       "source": [
         "from botorch.test_functions.multi_objective import ZDT2\n",
         "\n",
@@ -111,7 +120,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 4,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -182,7 +191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -267,7 +276,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 6,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -322,7 +331,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 7,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -407,12 +416,23 @@
           "output_type": "stream",
           "text": [
             "\n",
-            "Batch  1: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (96.13, 101.33, 101.51), time = 52.82.\n",
-            "Batch  2: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (99.64, 116.11, 111.67), time = 50.76.\n",
-            "Batch  3: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (102.30, 119.87, 119.10), time = 110.82.\n",
-            "Batch  4: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (102.30, 119.98, 119.10), time = 105.50.\n",
-            "Batch  5: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (102.30, 119.98, 119.10), time = 143.57.\n",
-            "Batch  6: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (102.30, 119.98, 119.10), time = 119.22."
+            "Batch  1: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (95.48, 101.71, 101.74), time = 75.11.\n",
+            "Batch  2: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (97.16, 119.26, 112.71), time = 113.28.\n",
+            "Batch  3: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (100.32, 119.28, 113.46), time = 159.30.\n",
+            "Batch  4: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (105.14, 119.28, 120.04), time = 138.32.\n",
+            "Batch  5: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (105.14, 119.28, 120.04), time = 231.76.\n",
+            "Batch  6: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (105.14, 119.28, 120.04), time = 196.91.\n",
+            "Batch  7: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (105.14, 119.28, 120.04), time = 226.02.\n",
+            "Batch  8: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (105.14, 119.99, 120.04), time = 173.58.\n",
+            "Batch  9: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (106.13, 119.99, 120.04), time = 218.87.\n",
+            "Batch 10: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (106.90, 119.99, 120.04), time = 210.63.\n",
+            "Batch 11: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (106.90, 119.99, 120.04), time = 205.02.\n",
+            "Batch 12: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (106.90, 119.99, 120.04), time = 256.03.\n",
+            "Batch 13: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (107.39, 119.99, 120.04), time = 224.97.\n",
+            "Batch 14: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (109.90, 119.99, 120.04), time = 305.91.\n",
+            "Batch 15: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (109.90, 119.99, 120.11), time = 195.60.\n",
+            "Batch 16: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (109.90, 119.99, 120.11), time = 248.54.\n",
+            "Batch 17: Hypervolume (qNParEGO, qEHVI, qNEHVI) = (109.90, 119.99, 120.11), time = 354.45."
           ]
         }
       ],
@@ -562,7 +582,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "collapsed": false,
         "customOutput": null,
@@ -685,7 +705,7 @@
         "\n",
         "fig, axes = plt.subplots(1, 3, figsize=(23, 7), sharex=True, sharey=True)\n",
         "algos = [\"qNParEGO\", \"qEHVI\", \"qNEHVI\"]\n",
-        "cm = plt.get_cmap(\"Spectral\")\n",
+        "cm = plt.get_cmap(\"viridis\")\n",
         "\n",
         "batch_number = torch.cat(\n",
         "    [\n",
@@ -712,7 +732,7 @@
         "    axes[i].legend()\n",
         "axes[0].set_ylabel(\"Objective 2\")\n",
         "norm = plt.Normalize(batch_number.min(), batch_number.max())\n",
-        "sm = ScalarMappable(norm=norm, cmap=plt.get_cmap(\"Spectral\"))\n",
+        "sm = ScalarMappable(norm=norm, cmap=plt.get_cmap(\"viridis\"))\n",
         "sm.set_array([])\n",
         "fig.subplots_adjust(right=0.9)\n",
         "cbar_ax = fig.add_axes([0.93, 0.15, 0.01, 0.7])\n",
