--- a/report/tt.ipynb
+++ b/report/tt.ipynb
@@ -625,6 +625,7 @@
     "        -train_obj[:, 0].cpu().numpy(),\n",
     "        -train_obj[:, 1].cpu().numpy(),\n",
     "        c=batch_number,\n",
+    "        cmap=cm,\n",
     "        alpha=0.8,\n",
     "    )\n",
     "    axes[i].plot(pareto_front[:, 0], pareto_front[:, 1], \"r--\", label=\"Pareto Front\")\n",
@@ -633,7 +634,7 @@
     "    axes[i].legend()\n",
     "axes[0].set_ylabel(\"Objective 2\")\n",
     "norm = plt.Normalize(batch_number.min(), batch_number.max())\n",
-    "sm = ScalarMappable(norm=norm, cmap=plt.get_cmap(\"plasma\"))\n",
+    "sm = ScalarMappable(norm=norm, cmap=plt.get_cmap(\"viridis\"))\n",
     "sm.set_array([])\n",
     "fig.subplots_adjust(right=0.9)\n",
     "cbar_ax = fig.add_axes([0.93, 0.15, 0.01, 0.7])\n",
